--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <h1>
 <marquee scrollamount=10>
 <font color="blue">
-Sample web page is working correctry.
+Sample web page is working correctryyy.
 </font>
 </marquee>
 </h1>
